--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       // https://docs.walletconnect.com/2.0/web/web3modal/html/wagmi/theming
       window.modal_variables = { "--w3m-z-index": "99999999999999999999999999999999",
         // Example of what you can do:
-        "--w3m-accent-color": "#0d8029",
-        "--w3m-background-color": "#000000",
+        "--w3m-accent-color": "#16421a",
+        "--w3m-background-color": "#16421a",
         "--w3m-background-border-radius": "0px",
         "--w3m-container-border-radius": "0px",
         "--w3m-wallet-icon-border-radius": "0px",
